--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>roslaunch</build_depend>
   <run_depend>ackermann_controller</run_depend>
   <run_depend>controller_manager</run_depend>
+  <run_depend>joint_state_controller</run_depend>
 
   <export>
     <architecture_independent />
