--- a/config/control.yaml
+++ b/config/control.yaml
@@ -1,10 +1,18 @@
 blinky_joint_publisher:
   type: "joint_state_controller/JointStateController"
+
   publish_rate: 50
 
 blinky_drive_controller:
   type: "ackermann_controller/AckermannController"
-  publish_rate: 50
 
+  base_length: 0.33
+  child_frame_id: base_footprint
+  cmd_timeout: 0.3
   drive_joint_name: wheels
+  frame_id: odom
+  pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  publish_rate: 50
   steering_joint_name: steering_angle
+  twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  wheel_diam: 0.105
