--- a/config/control.yaml
+++ b/config/control.yaml
@@ -9,10 +9,10 @@ blinky_drive_controller:
   base_length: 0.33
   child_frame_id: base_footprint
   cmd_timeout: 0.3
-  drive_joint_name: wheels
+  drive_joint_names: ['front_left_wheel_joint', 'front_right_wheel_joint', 'rear_left_wheel_joint', 'rear_right_wheel_joint']
   frame_id: odom
   pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 3.0]
   publish_rate: 50
-  steering_joint_name: steering_angle
+  steering_joint_names: ['front_left_steering_joint', 'front_right_steering_joint']
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 3.0]
   wheel_diam: 0.105
